002/nginx-app-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  namespace: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-config
        configMap:
          name: nginx-config-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-app
spec:
  selector:
    app: nginx-app
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 8180
