002/nginx-token-deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-token
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  namespace: nginx-token
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-index-config
        configMap:
          name: nginx-config-1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-token
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: http
    port: 9500
    targetPort: 80
