002/nginx-token-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-token
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: http
    port: 9500
    targetPort: 80
