002/nginx-token-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-token-ingress
  labels:
    app: nginx
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - # host: "http://<your-domain.com>"
    http:
      paths:
      - # path: /blogz
        # The below one is used to manage static files 
        path: /token
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
